# certgen

./: .gitignore  requirements.txt
backend/: pyproject.toml
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/api/routes/: __init__.py  attendees.py  certificates.py  email.py  field_mappings.py  generation.py  templates.py
backend/app/models/: __init__.py  attendee.py  email_log.py  field_mapping.py  generated_certificate.py  generation_job.py  template.py
backend/app/schemas/: __init__.py  attendee.py  email.py  field_mapping.py  generation.py  template.py
backend/app/services/: __init__.py  certificate_renderer.py  email_service.py  excel_service.py  generation_service.py  storage_service.py  template_service.py
backend/app/utils/: coordinates.py  filenames.py  validation.py
docs/: architecture.md  next-tasks.md  review-report.md  roadmap.md  specification.md
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: attendees.ts  certificates.ts  client.ts  fieldMappings.ts  generation.ts  templates.ts
frontend/src/components/: AttendeeTable.tsx  FieldControlPanel.tsx  JobStatusCard.tsx  Layout.tsx  TemplateCanvas.tsx  UploadBox.tsx
frontend/src/pages/: AttendeeImportPage.tsx  CertificatesPage.tsx  DashboardPage.tsx  EmailPage.tsx  GeneratePage.tsx  TemplateDesignerPage.tsx  TemplatesPage.tsx
frontend/src/styles/: index.css
frontend/src/types/: attendee.ts  fieldMapping.ts  generation.ts  template.ts
